# TinyRasterizer

./: CMakeLists.txt  README.md  build.bat  main.c
code/: main.c
code/base/: base_arena.c  base_arena.h  base_core.h  base_inc.c  base_inc.h  base_markup.h  base_math.c  base_math.h
code/game/: game.c  game.h
code/os/: os_inc.c  os_inc.h
code/os/core/: os_core.c  os_core.h
code/os/core/linux/: os_core_linux.c  os_core_linux.h
code/os/core/win32/: os_core_win32.c  os_core_win32.h
code/system/: array.c  array.h  camera.c  camera.h  draw.c  draw.h  input.c  input.h  mesh.c  mesh.h  system_inc.c  system_inc.h  texture.c  texture.h
game/: display.c  draw.c  game.c  game.h  input.c  mesh.c  vector.c
game/base/: base_core.c  base_inc.c  base_math.c
include/: display.h  draw.h  game.h  input.h  mesh.h  triangle.h  vector.h
include/base/: base_core.h  base_inc.h  base_math.h
src/: display.c  main.c  mesh.c  triangle.c  vector.c
